objects/Expense__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateOfContribution__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>DateOfContribution</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpdatedAmount__c</fullName>
        <label>UpdatedAmount</label>
        <summarizedField>ExpenseOfMember__c.AmountOfContribution__c</summarizedField>
        <summaryForeignKey>ExpenseOfMember__c.ExpenseId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Expense</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Expense-{000}</displayFormat>
        <label>Expense Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CheckingContributedAmount</fullName>
        <active>true</active>
        <errorConditionFormula>UpdatedAmount__c  &gt;  Amount__c</errorConditionFormula>
        <errorMessage>Your Total Contributed Amount exceeds total expenses of the event..</errorMessage>
    </validationRules>
</CustomObject>